styles/main.css
/* GENERAL */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
    color: #fff;
}

/* UTILITIES */
.btn {
  display: inline-block;
  text-transform: uppercase;
  color: #999999;
  border: 2px solid #999999;
  border-radius: 20px;
  font-family: 'Montserrat';
  padding: 10px 35px;
  font-size: 12px;
}

/* TYPOGRAPHY */
h2 {
  margin: 0;
  font-family: 'Roboto', Sans-serif;
  font-weight: 700;
}

h4 {
  margin: 0;
  font-family: 'Roboto', Sans-serif;
  font-weight: 700;
}

h5 {
  color: #686868;
  font-family: 'Montserrat', Sans-serif;
  font-weight: 400;
  font-size: 11px;
}

a {
  text-decoration: none;
}

a:link,
a:visited,
a:focus,
a:active {
  color: inherit;
}

ul {
  list-style: none;
  margin: 0;
  padding: 0;
}
 
/* LAYOUT */
#app {
  display: flex;
  flex-direction: column;
  height: 100vh;
}

/* MAIN WINDOW */
#main-window {
  flex-grow: 1;
  display: flex;
}


/* SIDEBAR */
#sidebar {
  flex-basis: 215px;
  display: flex;
  flex-direction: column;
  background: #000;
}

/* Top */
.sidebar-top {
  flex-grow: 1;
}

.sidebar-top img.logo-big {
  padding: 20px 70px 20px 20px;
  max-width: 100%;
}

.sidebar-top img.logo-small {
  width: 28px;
  margin: 5px auto 15px;
  display: none;
}

.sidebar-top .nav-menu li {
  border-left: 3px solid transparent;
}

.sidebar-top .nav-menu li:hover {
  border-left: 3px solid #a3eb4d;
}

.sidebar-top a {
  display: inline-block;
  padding: 5px 15px;
  width: 100%;
  color: #686868;
  font-family: 'Montserrat', Sans-serif;
  font-weight: 400;
  font-size: 12px;
}

.sidebar-top .nav-menu img {
  width: 24px;
  vertical-align: middle;
  margin-right: 8px;
}

.user-playlists {
  padding: 20px;
}

.user-playlists h4 {
  font-size: 14px;
}

.user-playlists i {
  font-size: 38px;
  margin-right: 20px;
}

.user-playlists a:nth-child(2) {
  font-size: 14px;
}

.user-playlists a {
  padding-left: 0;
  font-size: 12px;
  line-height: 24px;
}

.user-playlists a:hover {
  color: inherit;
}

/* Bottom */
.sidebar-bottom {
  padding: 10px 20px;
}

.sidebar-bottom .install {
  position: relative;
  color: #686868;
  font-family: 'Montserrat', sans-serif;
  font-size: 12px;
  padding-bottom: 10px;
}

.sidebar-bottom .install::after {
  position: absolute;
  content: '';
  width: 100%;
  height: 1px;
  background: #686868;
  left: 0;
  bottom: 0;
}

.sidebar-bottom .install i {
  margin-right: 10px
}

.sidebar-bottom .user {
  font-family: 'Montserrat', sans-serif;
  font-size: 12px;
  font-weight: 700;
  padding-top: 10px;
}

.sidebar-bottom .user img {
  width: 20px;
  border-radius: 50%;
  background: #666;
  vertical-align: middle;
  margin-right: 10px;
}

/* CONTENT */
#content {
  position: relative;
  flex-grow: 1;
  background: #141921;
}

/* Top bar */
.content-top-bar {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 80px;
  background: rgba(0, 0, 0, .5);
  z-index: 1;
  text-align: right;
}

.content-top-bar .btn {
  margin: 20px;
}

/* Menu */
.content-menu {
  margin: 15px 0;
}


.content-menu ul {
  text-align: center;
}

.content-menu ul li {
  display: inline-block;
  margin: 0 10px 30px;
}

.content-menu ul li a {
  position: relative;
  font-family: 'Montserrat', sans-serif;
  font-weight: 400;
  text-transform: uppercase;
  color: #656565;
  font-size: 12px;
}

.content-menu ul li a::after {
  content: '';
  position: absolute;
  width: 30px;
  height: 2px;
  background: #a3eb4d;
  bottom: -5px;
  left: 50%;
  transform: translateX(-50%);
  opacity: 0;
}

.content-menu ul li a:hover::after {
  opacity: 1;
}

/* Scrollable */
#content .scrollable {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  overflow-y: auto;
  padding: 80px 20px 30px;
}

.content-category {
  margin-bottom: 30px;
}

.big-square {
  display: flex;
  flex-wrap: wrap;
  margin-top: 25px;
}

.playlist {
  flex-basis: calc(100% / 6 - 15px);
  margin-right: 15px;
  text-align: center;
}

.playlist:last-child {
  margin: 0;
}

.playlist .img-container {
  position: relative;
  background: #000;
}

.playlist img {
  display: block;
  position: relative;
  width: 100%;
  opacity: 1;
}

.playlist .img-container:hover img {
  opacity: .5;
}

.playlist .img-container::after {
  position: absolute;
  content:'\f144';
  top: 50%;
  left: 50%;
  transform:translate(-50%, -50%);
  font-family: "Font Awesome 5 Free";
  font-size: 90px;
  opacity: .5;
  display: none;
}

.playlist .img-container:hover::after {
  display: block;
}

.playlist h4 {
  margin: 10px 0;
}

.content-category > h5 {
  margin: 10px 0 15px;
}

.rounded {
  overflow: hidden;
  border-radius: 50%;
}

.playlist a {
  color: inherit;
}

.playlist a h5:hover {
  text-decoration: underline;
  text-decoration-color: #686868;
}

.playlist a h4:hover {
  text-decoration: underline;
  text-decoration-color: #fff;
}

/* BOTTOM PLAYER */
#player {
  height: 80px;
  background: #222;
  display: flex;
  padding: 16px 8px;
}

.now-playing-info,
.volume {
  display: flex;
  align-items: center;
  flex-basis: 210px;
}

.now-playing-controls {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}

.now-playing-info img {
  height: 100%;
  width: auto;
}

.track-name {
  padding: 0 15px;
  flex-grow: 1;
}

.track-name a:hover {
  text-decoration: underline;
  color: inherit;
}


.track-name h4 {
  font-size: 12px;
}

.track-name h5 {
  font-size: 10px;
} 

.now-playing-info .icons,
.volume .icons {
  font-size: 14px;
  color: #656565;
}

.now-playing-info .icons i,
.volume .icons i {
  padding: 0 4px;
}

.now-playing-info .icons a:hover,
.volume .icons a:hover {
  color: #fff;
}

.now-playing-controls .top-controls {
  display: flex;
  align-items: center;
}

.now-playing-controls .top-controls i:not(:nth-child(3)) {
  margin: 0 15px;
  cursor: pointer;
}

.now-playing-controls .top-controls i:nth-child(3) {
  font-size: 26px;
  margin: 0 25px;
  cursor: pointer;
}

.now-playing-controls .progress-bar {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
}

.now-playing-controls .bar {
  position: relative;
  width: 50%;
  margin: 0 40px;
  height: 4px;
  border-radius: 4px;
  background: #656565;
}

.now-playing-controls .bar-layover,
.volume .bar-layover {
  position: absolute;
  left: 0;
  height: 100%;
  width: 30%;
  background: #999999;
  border-radius: 4px;
  cursor: pointer;
}

.now-playing-controls .bar-layover::after,
.volume .bar-layover::after {
  content: '';
  position: absolute;
  top: 50%;
  right: 0;
  transform: translate(50%, -50%);
  width: 12px;
  height: 12px;
  border-radius: 50%;
  background: #fff;
  opacity: 0;
}


.now-playing-controls .bar:hover .bar-layover::after,
.volume .bar:hover .bar-layover::after {
  opacity: 1;
}

.now-playing-controls .bar:hover .bar-layover,
.volume .bar:hover .bar-layover {
  background: #a3eb4d;
}

.now-playing-controls .progress-bar span {
  font-size: .7em;
  font-family: 'Roboto', sans-serif;
}

.volume {
  display: flex;
  flex-wrap: nowrap;
  width: 100%;
}

.volume .bar {
  position: relative;
  width: 50%;
  height: 4px;
  border-radius: 4px;
  background: #656565;
}

/* MEDIA QUERY */

@media all and (max-width: 1199px) {
  .playlist {
    flex-basis: calc((100% / 4) - 15px);
  }
}

@media all and (max-width: 767px) {
  #sidebar {
    flex-basis: 0px;
  }

  .sidebar-top .logo-big,
  .sidebar-top .menu-item,
  .sidebar-top .user-playlists,
  .sidebar-bottom .menu-item,
  .sidebar-bottom .install::after {
    display: none;
  }

  .sidebar-top a {
    display: inline-block;
    padding: 5px 10px;
  }

  .sidebar-top img.logo-big {
    margin-right: 0;
  }

  .sidebar-top img.logo-small {
    display: block;
  }

  .sidebar-top .nav-menu li {
    border-left: none;
  }
  
  .sidebar-top .nav-menu li:hover {
    border-left: none;
  }

  .sidebar-top .nav-menu img {
    margin: 0;
  }

  .sidebar-bottom {
    padding: 10px 0px;
    text-align: center;
  }

  .sidebar-bottom .install i,
  .sidebar-bottom .user img {
    margin: 0;
  }

  .playlist {
    flex-basis: calc(50% - 15px);
  }
}

